初始化rk数据
